Fixed the dashboard list component to handle overflow (#200)

--- a/client/components/Dashboard/AppsRequestsContainer/styles.scss
+++ b/client/components/Dashboard/AppsRequestsContainer/styles.scss
@@ -23,6 +23,7 @@
 .container {
   background-color: $primary-white;
   height: 485px;
+  overflow: scroll;
 }
 .tab {
   background-color: $primary-grey;
